--- a/project/docker-compose.yml
+++ b/project/docker-compose.yml
@@ -24,6 +24,8 @@ services:
       replicas: 1
     environment:
       DSN: "host=postgres port=5432 user=postgres password=password dbname=users sslmode=disable timezone=UTC connect_timeout=5"
+      SYMMETRIC_KEY: "12345678901234567890123456789012"
+    depends_on: [ postgres ]
 
   postgres:
     image: 'postgres:14.2'
