--- a/project/docker-compose.yml
+++ b/project/docker-compose.yml
@@ -11,6 +11,8 @@ services:
     deploy:
       mode: replicated
       replicas: 1
+    environment:
+      SYMMETRIC_KEY: "12345678901234567890123456789012"
 
   auth-service:
     build:
