--- a/project/docker-compose.yml
+++ b/project/docker-compose.yml
@@ -1,6 +1,13 @@
 version: '3'
 
 services:
+  nginx:
+    image: nginx:latest
+    ports:
+      - "80:80"
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf
+
   api-gateway:
     build:
       context: ./../api-gateway
