--- a/project/docker-compose.yml
+++ b/project/docker-compose.yml
@@ -21,6 +21,17 @@ services:
     environment:
       SYMMETRIC_KEY: "12345678901234567890123456789012"
 
+  collector:
+    build:
+      context: ./../collector
+      dockerfile: collector.dockerfile
+    restart: always
+    ports:
+      - "8082:80"
+    deploy:
+      mode: replicated
+      replicas: 1
+
   auth-service:
     build:
       context: ./../auth-service
